@@ -294,7 +294,8 @@
       <li><module>mod_ssl</module>: The default format of the <code>*_DN</code>
       variables has changed. The old format can still be used with the new
       <code>LegacyDNStringFormat</code> argument to <directive
-      module="mod_ssl">SSLOptions</directive>.</li>
+      module="mod_ssl">SSLOptions</directive>. The SSLv2 protocol is
+      no longer supported.</li>
 
       <li><program>htpasswd</program> now uses MD5 hash by default on
       all platforms.</li>
